package controller;

public class Labyrinth {
    
}
